dapr servisler sidecar olarak uygulanmasi

--- a/src/Auth/Auth.API/appsettings.json
+++ b/src/Auth/Auth.API/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.eShopOnDapr": "Information",
+        "System": "Warning"
+      }
+    }
+  },
+  "IdentityUrl": "http://sts.skoruba.local",
+  "IdentityUrlExternal": "http://sts.skoruba.local",
+  "RetryMigrations": false,
+  "SeqServerUrl": null,
+  "GracePeriodTime": "10",
+  "SendConfirmationEmail": true,
+  "DocumentGrpcUrl": "https://localhost:6008"
+
 }
