--- a/src/Auth/Auth.API/Properties/launchSettings.json
+++ b/src/Auth/Auth.API/Properties/launchSettings.json
@@ -10,12 +10,13 @@
   "profiles": {
     "Auth.API": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7085;http://localhost:5008",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5008",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
