--- a/src/Document/Document.Application/Document.Application.csproj
+++ b/src/Document/Document.Application/Document.Application.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Dapr.AspNetCore" Version="1.8.0" />
+        <PackageReference Include="Dapr.Client" Version="1.8.0" />
       <ProjectReference Include="..\Document.Domain\Document.Domain.csproj" />
     </ItemGroup>
 
