--- a/src/dapr/components/daprpoc-secretstore.yaml
+++ b/src/dapr/components/daprpoc-secretstore.yaml
@@ -1,13 +1,12 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: secretstore
-  namespace: default
+  name: daprpoc-secretstore
 spec:
   type: secretstores.local.file
   version: v1
   metadata:
   - name: secretsFile
-    value: ../../dapr/components/secrets.json
+    value: ../../dapr/components/daprpoc-secrets.json
   - name: nestedSeparator
     value: ":"
