--- a/src/dapr/components/daprpoc-email.yaml
+++ b/src/dapr/components/daprpoc-email.yaml
@@ -11,9 +11,9 @@ spec:
   - name: port
     value: 587
   - name: user
-    value: 
+    value: ""
   - name: password
-    value: 
+    value: ""
   - name: skipTLSVerify
     value: false
 auth:
